--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "typescript": "^5.8.3"
     },
     "dependencies": {
+        "googleapis": "^150.0.1",
         "node-telegram-bot-api": "^0.66.0",
         "pg": "^8.16.3"
     }
