--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node ./dist/index.js",
-        "build": "tsc"
+        "build": "tsc",
+        "dev": "ts-node ./src/index.ts"
     },
     "devDependencies": {
         "@types/node": "^24.0.10",
