--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "license": "ISC",
     "author": "",
     "main": "index.js",
+    "type": "module",
     "scripts": {
         "start": "node ./dist/index.js",
         "build": "tsc",
