--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
     "license": "ISC",
     "author": "",
     "main": "index.js",
-    "type": "module",
     "scripts": {
         "start": "node ./dist/index.js",
         "build": "tsc",
-        "dev": "ts-node ./src/index.ts"
+        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+        "migratedb": "node db/migrate.js"
     },
     "devDependencies": {
+        "@types/express": "^5.0.3",
         "@types/node": "^24.0.10",
         "@types/node-telegram-bot-api": "^0.64.9",
         "@types/pg": "^8.15.4",
         "ts-node": "^10.9.2",
+        "ts-node-dev": "^2.0.0",
         "typescript": "^5.8.3"
     },
     "dependencies": {
+        "express": "^5.1.0",
         "googleapis": "^150.0.1",
         "node-telegram-bot-api": "^0.66.0",
         "pg": "^8.16.3"
