--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build": "tsc",
         "buildAndStart": "tsc && node dist/index.js",
         "dev": "tsnd --respawn -T -r tsconfig-paths/register src/index.ts",
-        "migratedb": "tsnd -T src/db/migrate.js"
+        "migratedb": "tsnd -T src/db/migrate.ts"
     },
     "devDependencies": {
         "@types/cors": "^2.8.19",
