--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "devDependencies": {
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
+        "@types/multer": "^2.0.0",
         "@types/node": "^24.0.10",
         "@types/node-telegram-bot-api": "^0.64.9",
         "@types/pg": "^8.15.4",
@@ -27,6 +28,7 @@
         "cors": "^2.8.5",
         "express": "^5.1.0",
         "googleapis": "^150.0.1",
+        "multer": "^2.0.2",
         "node-telegram-bot-api": "^0.66.0",
         "pg": "^8.16.3"
     }
