--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "devDependencies": {
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
+        "@types/fluent-ffmpeg": "^2.1.27",
         "@types/multer": "^2.0.0",
         "@types/node": "^24.0.10",
         "@types/node-telegram-bot-api": "^0.64.9",
@@ -28,6 +29,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^5.1.0",
+        "fluent-ffmpeg": "^2.1.3",
         "googleapis": "^150.0.1",
         "multer": "^2.0.2",
         "node-telegram-bot-api": "^0.66.0",
