--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     },
     "dependencies": {
         "cors": "^2.8.5",
+        "dotenv": "^17.2.2",
         "express": "^5.1.0",
         "fluent-ffmpeg": "^2.1.3",
         "googleapis": "^150.0.1",
